--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -112,8 +112,10 @@
         </tr>
         <tr>
             <th colspan="9">
-                <p style="background: lime;"><font size="6" color="black">ハイパーG ソフト 1.25mm
-                    ロール入荷！<!--<br>ハイパーG 1.25mm ロール入荷！--></font></p>
+                <p style="background: blue;"><font size="6" color="white">
+                     Babolat BRIO 1.25mm ロール入荷！
+<!--                    <br>GoProの仕様改変に伴い、殆どの動画が視聴できません。<br>以降作業が完了するまで暫くお待ちください。<br><br>-->
+                </font></p>
             </th>
         </tr>
         <tr bgcolor="khaki" style="font-size: medium;">
