--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -112,9 +112,9 @@
         </tr>
         <tr>
             <th colspan="9">
-                <p style="background: blue;"><font size="6" color="white">
-                     Babolat BRIO 1.25mm ロール入荷！
-<!--                    <br>GoProの仕様改変に伴い、殆どの動画が視聴できません。<br>以降作業が完了するまで暫くお待ちください。<br><br>-->
+                <p style="background: red;"><font size="6" color="white">
+<!--                     Babolat BRIO 1.25mm ロール入荷！-->
+                    <br>GoProの仕様改変に伴い、YouTubeに移行中。<br>このページからの遷移以外で検索しても、動画は表示されませんので、ご安心ください<br><br>
                 </font></p>
             </th>
         </tr>
@@ -138,6 +138,170 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <!-- ■■■■■■　ここから試合コンテンツ　■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="2" colspan="1">2024年<br>08月18日(日)</th>
+            <th class="関口">関口</th>
+            <th class="柏木">柏木</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="大隅">大隅</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/WeK94PbJorQ" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="近藤">近藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="大隅">大隅</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/cVQIuzsfHa4" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="2" colspan="1">2024年<br>08月11日(日)</th>
+            <th class="大隅">大隅</th>
+            <th class="鵜沢">鵜沢</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="黒澤">黒澤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/Z0zQJoh0tQs" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="伊能">伊能</th>
+            <th class="関口">関口</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="大隅">大隅</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/kXa4dXzJgY0" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="2" colspan="1">2024年<br>08月04日(日)</th>
+            <th class="黒澤">黒澤</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/kzC04KmDusY" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="黒澤">黒澤</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/GDTKuQ5NCAY" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="2" colspan="1">2024年<br>08月03日(土)</th>
+            <th class="青木">青木</th>
+            <th class="須藤">須藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="伊能">伊能</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/i2-2fnDwRus" target="_blank">動画<br>(熱エラー)</a></th>
+        </tr>
+        <tr>
+            <th class="小林【広】">小林【広】</th>
+            <th class="青木">青木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="伊能">伊能</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/QcbJ4JdaSjo" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="2" colspan="1">2024年<br>07月28日(日)</th>
+            <th class="折原">折原</th>
+            <th class="青木">青木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/zjYu3DD_hzY" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="折原">折原</th>
+            <th class="黒澤">黒澤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/u9uL4EoWfrU" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="3" colspan="1">2024年<br>07月27日(土)</th>
+            <th class="折原">折原</th>
+            <th class="和田">和田</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="青木">青木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/WK4iMVanhB4" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="折原">折原</th>
+            <th class="和田">和田</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="青木">青木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/o302EX7MhRM" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="青木">青木</th>
+            <th class="大隅">大隅</th>
+            <th colspan="3">【中断】</th>
+            <th class="関">関</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/Vkd8L7uLIzs" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
         <tbody name="game" style="font-size: medium;">
         <tr>
             <th rowspan="3" colspan="1">2024年<br>07月15日(月)</th>
