--- a/band/untitled/sound_resources.html
+++ b/band/untitled/sound_resources.html
@@ -18,6 +18,51 @@
             <th style="width: 30%;">タイトル</th>
             <th style="width: 10%;">リンク</th>
         </tr>
+
+        <!-- ■■ 2024年09月06日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="1">2024年09月06日（金）</td>
+            <td style="text-align:center" rowspan="1">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0016</td>
+            <td style="text-align:center">2D</td>
+            <td>音出し（流しっ放し）_001</td>
+            <td style="text-align:center"><a href="https://youtu.be/yJNbTUM6oHM" target="_blank">動画</a></td>
+        </tr>
+
+        <!-- ■■ 2024年08月24日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="2">2024年08月24日（金）</td>
+            <td style="text-align:center" rowspan="2">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0015</td>
+            <td style="text-align:center">2D</td>
+            <td>音出し（流しっ放し）_001</td>
+            <td style="text-align:center"><a href="https://youtu.be/RAmhoovGW-8" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0016</td>
+            <td style="text-align:center">360°</td>
+            <td>音出し（流しっ放し）_001</td>
+            <!--            <td style="text-align:center"><a href="" target="_blank">動画</a></td>-->
+            <td style="text-align:center">アップロード未定</td>
+        </tr>
+
+        <!-- ■■ 2024年07月19日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="2">2024年07月19日（金）</td>
+            <td style="text-align:center" rowspan="2">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0013</td>
+            <td style="text-align:center">2D</td>
+            <td>音出し（流しっ放し）_001</td>
+            <td style="text-align:center"><a href="https://gopro.com/v/8GZ62JzRr0rWN" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center">0014</td>
+            <td style="text-align:center">360°</td>
+            <td>音出し（流しっ放し）_001</td>
+            <td style="text-align:center"><a href="https://gopro.com/v/WlG0LVZzKQVmO" target="_blank">動画</a></td>
+        </tr>
+
         <!-- ■■ 2024年07月05日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
             <td style="text-align:center" rowspan="12">2024年07月05日（金）</td>
@@ -83,22 +128,6 @@
             <td style="text-align:center">0012</td>
             <td>音出し（流しっ放し）_008</td>
             <td style="text-align:center"><a href="https://gopro.com/v/2q9lZ3nLapZ58" target="_blank">動画</a></td>
-        </tr>
-        <!-- ■■ 2024年07月19日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
-        <tr>
-            <td style="text-align:center" rowspan="2">2024年07月19日（金）</td>
-            <td style="text-align:center" rowspan="2">STUDIO PARK SIDE（戸田）</td>
-            <td style="text-align:center">0013</td>
-            <td style="text-align:center">2D</td>
-            <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/8GZ62JzRr0rWN" target="_blank">動画</a></td>
-        </tr>
-        <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
-        <tr>
-            <td style="text-align:center">0014</td>
-            <td style="text-align:center">360°</td>
-            <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/WlG0LVZzKQVmO" target="_blank">動画</a></td>
         </tr>
     </table>
 </center>
