--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -140,6 +140,114 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tbody name="game" style="font-size: medium;">
         <tr>
+            <th rowspan="3" colspan="1">2024年<br>09月07日(土)</th>
+            <th class="鵜沢">鵜沢</th>
+            <th class="柏木">柏木</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/JC2rPURbwNI" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="近藤">近藤</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="大隅">大隅</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/rPL6qQwTbOk" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="関口">関口</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="鵜沢">鵜沢</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/90v7GvCemMs" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="3" colspan="1">2024年<br>09月01日(日)</th>
+            <th class="内村">内村</th>
+            <th class="柏木">柏木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="関口">関口</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/zao1LP91CQU" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="小林【広】">小林【広】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="井上">井上</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/pyq3IdYQeqU" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="青木">青木</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/1peNkVcJY_0" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="3" colspan="1">2024年<br>08月25日(日)</th>
+            <th class="折原">折原</th>
+            <th class="青木">青木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="和田">和田</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/Iw1jfCYD1CM" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="折原">折原</th>
+            <th class="和田">和田</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="青木">青木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/LKgCDn3EyJo" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="青木">青木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="折原">折原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/sz-Fj5_7vWc" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
             <th rowspan="2" colspan="1">2024年<br>08月18日(日)</th>
             <th class="関口">関口</th>
             <th class="柏木">柏木</th>
