--- a/band/untitled/sound_resources.html
+++ b/band/untitled/sound_resources.html
@@ -19,11 +19,21 @@
             <th style="width: 10%;">リンク</th>
         </tr>
 
+        <!-- ■■ 2024年09月27日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="1">2024年09月27日（金）</td>
+            <td style="text-align:center" rowspan="1">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0008</td>
+            <td style="text-align:center">2D</td>
+            <td>音出し（流しっ放し）_001</td>
+            <td style="text-align:center"><a href="https://youtu.be/Ypo9gRwvWtY" target="_blank">動画</a></td>
+        </tr>
+
         <!-- ■■ 2024年09月06日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
             <td style="text-align:center" rowspan="1">2024年09月06日（金）</td>
             <td style="text-align:center" rowspan="1">STUDIO PARK SIDE（戸田）</td>
-            <td style="text-align:center">0016</td>
+            <td style="text-align:center">0007</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_001</td>
             <td style="text-align:center"><a href="https://youtu.be/yJNbTUM6oHM" target="_blank">動画</a></td>
@@ -31,36 +41,22 @@
 
         <!-- ■■ 2024年08月24日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
-            <td style="text-align:center" rowspan="2">2024年08月24日（金）</td>
-            <td style="text-align:center" rowspan="2">STUDIO PARK SIDE（戸田）</td>
-            <td style="text-align:center">0015</td>
+            <td style="text-align:center" rowspan="1">2024年08月24日（金）</td>
+            <td style="text-align:center" rowspan="1">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0006</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_001</td>
             <td style="text-align:center"><a href="https://youtu.be/RAmhoovGW-8" target="_blank">動画</a></td>
         </tr>
-        <tr>
-            <td style="text-align:center">0016</td>
-            <td style="text-align:center">360°</td>
-            <td>音出し（流しっ放し）_001</td>
-            <!--            <td style="text-align:center"><a href="" target="_blank">動画</a></td>-->
-            <td style="text-align:center">アップロード未定</td>
-        </tr>
 
         <!-- ■■ 2024年07月19日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
-            <td style="text-align:center" rowspan="2">2024年07月19日（金）</td>
-            <td style="text-align:center" rowspan="2">STUDIO PARK SIDE（戸田）</td>
-            <td style="text-align:center">0013</td>
-            <td style="text-align:center">2D</td>
+            <td style="text-align:center" rowspan="1">2024年07月19日（金）</td>
+            <td style="text-align:center" rowspan="1">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0005</td>
+            <td style="text-align:center">3D</td>
             <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/8GZ62JzRr0rWN" target="_blank">動画</a></td>
-        </tr>
-        <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
-        <tr>
-            <td style="text-align:center">0014</td>
-            <td style="text-align:center">360°</td>
-            <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/WlG0LVZzKQVmO" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/qmALONUnw-U" target="_blank">動画</a></td>
         </tr>
 
         <!-- ■■ 2024年07月05日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
@@ -70,64 +66,22 @@
             <td style="text-align:center">0001</td>
             <td style="text-align:center" rowspan="4">2D</td>
             <td>音出し_001</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/DkZqW1BPadE46" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/taX1KTV5FtA" target="_blank">動画</a></td>
         </tr>
         <tr>
             <td style="text-align:center">0002</td>
             <td>音出し_002</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/3a9lyyMORkamq" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/Ix5Ysr7FmXc" target="_blank">動画</a></td>
         </tr>
         <tr>
             <td style="text-align:center">0003</td>
             <td>音出し_003</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/MW4beekKaPGgK" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/s47uMAjaVkY" target="_blank">動画</a></td>
         </tr>
         <tr>
             <td style="text-align:center">0004</td>
             <td>音出し_004</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/3a9lyq54OWrGp" target="_blank">動画</a></td>
-        </tr>
-<!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
-        <tr>
-            <td style="text-align:center">0005</td>
-            <td style="text-align:center" rowspan="8">360°</td>
-            <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/695wvB4zpJPQ2" target="_blank">動画</a></td>
-        </tr>
-        <tr>
-            <td style="text-align:center">0006</td>
-            <td>音出し（流しっ放し）_002</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/m4n1Mv962EbyL" target="_blank">動画</a></td>
-        </tr>
-        <tr>
-            <td style="text-align:center">0007</td>
-            <td>音出し（流しっ放し）_003</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/k4LyerpKooNZg" target="_blank">動画</a></td>
-        </tr>
-        <tr>
-            <td style="text-align:center">0008</td>
-            <td>音出し（流しっ放し）_004</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/ymkVJ6JWJ5PVR" target="_blank">動画</a></td>
-        </tr>
-        <tr>
-            <td style="text-align:center">0009</td>
-            <td>音出し（流しっ放し）_005</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/V6XrN1mJn8EEL" target="_blank">動画</a></td>
-        </tr>
-        <tr>
-            <td style="text-align:center">0010</td>
-            <td>音出し（流しっ放し）_006</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/q6qWO2GRMeZ3W" target="_blank">動画</a></td>
-        </tr>
-        <tr>
-            <td style="text-align:center">0011</td>
-            <td>音出し（流しっ放し）_007</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/bqneE8Peneewz" target="_blank">動画</a></td>
-        </tr>
-        <tr>
-            <td style="text-align:center">0012</td>
-            <td>音出し（流しっ放し）_008</td>
-            <td style="text-align:center"><a href="https://gopro.com/v/2q9lZ3nLapZ58" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/VA2ATpi5V7Q" target="_blank">動画</a></td>
         </tr>
     </table>
 </center>
