--- a/band/untitled/sound_resources.html
+++ b/band/untitled/sound_resources.html
@@ -19,6 +19,37 @@
             <th style="width: 10%;">リンク</th>
         </tr>
 
+        <!-- ■■ 2024年11月22日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="2">2024年11月22日（金）</td>
+            <td style="text-align:center" rowspan="2">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0011</td>
+            <td style="text-align:center">2D</td>
+            <td>音出し（流しっ放し）_001</td>
+            <td style="text-align:center"><a href="https://youtu.be/L39VT1DqMyE" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0012</td>
+            <td style="text-align:center">2D</td>
+            <td>音出し（流しっ放し）_002</td>
+            <td style="text-align:center"><a href="https://youtu.be/MSxxd21fN74" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2024年11月01日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="2">2024年11月01日（金）</td>
+            <td style="text-align:center" rowspan="2">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0009</td>
+            <td style="text-align:center">2D</td>
+            <td>音出し（流しっ放し）_001</td>
+            <td style="text-align:center"><a href="https://youtu.be/B_lbSIj9FAs" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0010</td>
+            <td style="text-align:center">2D</td>
+            <td>音出し（流しっ放し）_002</td>
+            <td style="text-align:center"><a href="https://youtu.be/hiiuqqRmieI" target="_blank">動画</a></td>
+        </tr>
+
         <!-- ■■ 2024年09月27日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
             <td style="text-align:center" rowspan="1">2024年09月27日（金）</td>
