--- a/band/kazo/sound_resources.html
+++ b/band/kazo/sound_resources.html
@@ -19,9 +19,125 @@
             <th style="width: 10%;">リンク</th>
         </tr>
 
+        <!-- ■■ 2024年11月30日（土）2D ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="22">2024年11月30日（土）</td>
+            <td style="text-align:center" rowspan="22">MUSE-GYM（加須）</td>
+            <td style="text-align:center">0019</td>
+            <td style="text-align:center" rowspan="11">2D</td>
+            <td>001_音出し（リンダリンダ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/xu3eJ81vDco" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0020</td>
+            <td>002_音出し（情熱の薔薇）</td>
+            <td style="text-align:center"><a href="https://youtu.be/pr5CzeynaU0" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0021</td>
+            <td>003_音出し（I'm Not In Love）★</td>
+            <td style="text-align:center"><a href="https://youtu.be/3RYovByJHVw" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0022</td>
+            <td>004_音出し（NOTHING）★</td>
+            <td style="text-align:center"><a href="https://youtu.be/Uf7dGZHG2hM" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0023</td>
+            <td>005_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/R22Fo-W6D9k" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0024</td>
+            <td>006_音出し（リンダリンダ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/u3InuX7JHy0" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0025</td>
+            <td>007_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/TEILqUO8IsQ" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0026</td>
+            <td>008_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/tSoSd0gCR4o" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0027</td>
+            <td>009_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/1m4hSj5qiF0" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0028</td>
+            <td>010_音出し（情熱の薔薇）</td>
+            <td style="text-align:center"><a href="https://youtu.be/jRkk8WP5aDU" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0029</td>
+            <td>011_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/YzSJd2CpSOE" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2024年11月30日（土）360 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center">0030</td>
+            <td style="text-align:center" rowspan="11">360</td>
+            <td>001_音出し（リンダリンダ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/k3fkEy5LRdQ" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0031</td>
+            <td>002_音出し（情熱の薔薇）</td>
+            <td style="text-align:center"><a href="https://youtu.be/I3-CXo9UkIs" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0032</td>
+            <td>003_音出し（I'm Not In Love）★</td>
+            <td style="text-align:center"><a href="https://youtu.be/WQL3FWgWZh8" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0033</td>
+            <td>004_音出し（NOTHING）★</td>
+            <td style="text-align:center"><a href="https://youtu.be/EFcbzcXf8aA" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0034</td>
+            <td>005_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/H31GyeYhuHE" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0035</td>
+            <td>006_音出し（リンダリンダ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/F777VNjRPq0" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0036</td>
+            <td>007_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/f81dDmt9TBM" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0037</td>
+            <td>008_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/rfWNDvnqtEA" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0038</td>
+            <td>009_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/bbc1UhTntog" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0039</td>
+            <td>010_音出し（情熱の薔薇）</td>
+            <td style="text-align:center"><a href="https://youtu.be/mXnTfuAeeFE" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0040</td>
+            <td>011_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/3CmKx6-h3oM" target="_blank">動画</a></td>
+        </tr>
         <!-- ■■ 2024年10月12日（土）2D ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
-            <td style="text-align:center" rowspan="18">2024年07月05日（金）</td>
+            <td style="text-align:center" rowspan="18">2024年10月12日（土）</td>
             <td style="text-align:center" rowspan="18">MUSE-GYM（加須）</td>
             <td style="text-align:center">0001</td>
             <td style="text-align:center" rowspan="9">2D</td>
