--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -69,6 +69,7 @@
                     <option>伊能</option>
                     <option>鵜沢</option>
                     <option>内村</option>
+                    <option>海老原</option>
                     <option>大久保【可】</option>
                     <option>大久保【夫】</option>
                     <option>大隅</option>
@@ -78,7 +79,7 @@
                     <option>柏木</option>
                     <option>勝沼</option>
                     <option>鎌田</option>
-                    <option>木村【と】</option>
+                    <option>木村【とし】</option>
                     <option>木村【み】</option>
                     <option>黒澤</option>
                     <option>合田</option>
@@ -138,6 +139,285 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <!-- ■■■■■■　ここから試合コンテンツ　■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="4" colspan="1">2025年<br>02月16日(日)</th>
+            <th class="内村">内村</th>
+            <th class="大隅">大隅</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="関">関</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/wnx_8Kk9EQ4" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="近藤">近藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="櫻谷">櫻谷</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/5OzZsaFbf8M" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="井上">井上</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="近藤">近藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/d05H_ljLwhw" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="関">関</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="井上">井上</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/FwgMaRKIpAs" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="5" colspan="1">2025年<br>02月15日(土)</th>
+            <th class="和田">和田</th>
+            <th class="内村">内村</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="折原">折原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/AZOgXexN8qw" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="内村">内村</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="折原">折原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/IHpQtpjKV8s" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="内村">内村</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="折原">折原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/LXsUm2o-8QI" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="折原">折原</th>
+            <th class="内村">内村</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="鵜沢">鵜沢</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/UPxgy57CFpQ" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="高橋【皓】">高橋【皓】</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/U5JVUX07C38" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="4" colspan="1">2025年<br>02月11日(火)<br><font
+                    color="red">建国記念の日</font></th>
+            <th class="内村">内村</th>
+            <th class="折原">折原</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="海老原">海老原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/mGqC4EajOSo" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="折原">折原</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="海老原">海老原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/v6lWfGcEqpY" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="折原">折原</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="海老原">海老原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/hkn5ZZMs-Ng" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="柏木">柏木</th>
+            <th class="大隅">大隅</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="近藤">近藤</th>
+            <th class="内村">内村</th>
+            <th><a href="https://youtu.be/cVUs6wsh4R8" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="5" colspan="1">2025年<br>02月09日(日)</th>
+            <th class="小川">小川</th>
+            <th class="伊能">伊能</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="井上">井上</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/ScRQ-h0TjyU" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="伊能">伊能</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="井上">井上</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/tkAotHHuoCU" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="井上">井上</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/EGHJQ03VQk8" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="井上">井上</th>
+            <th class="内村">内村</th>
+            <th><a href="https://youtu.be/sqC90oc-MhY" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="大隅">大隅</th>
+            <th colspan="3">【中断】</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/5OpjqqVw1V0" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="7" colspan="1">2025年<br>02月08日(土)</th>
+            <th class="折原">折原</th>
+            <th class="木村【とし】">木村【とし】</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="和田">和田</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/YQCaiZCs01g" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="折原">折原</th>
+            <th class="木村【とし】">木村【とし】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="和田">和田</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/EIKbYtDieTQ" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="大隅">大隅</th>
+            <th class="木村【とし】">木村【とし】</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="近藤">近藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/qs1T1Wfj2cE" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="大隅">大隅</th>
+            <th class="柏木">柏木</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="黒澤">黒澤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/xLBU8ICTVGQ" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="鵜沢">鵜沢</th>
+            <th class="近藤">近藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/CeSvH1G2pw8" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="折原">折原</th>
+            <th class="大隅">大隅</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="木村【とし】">木村【とし】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/xKlD_PDXtfk" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="大隅">大隅</th>
+            <th class="木村【とし】">木村【とし】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/69gHhwL0p3Q" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
         <tbody name="game" style="font-size: medium;">
         <tr>
             <th rowspan="3" colspan="1">2025年<br>01月26日(日)</th>
@@ -1635,7 +1915,7 @@
         </tr>
         <tr>
             <th class="内村">内村</th>
-            <th class="木村【と】">木村【と】</th>
+            <th class="木村【とし】">木村【とし】</th>
             <th>×</th>
             <th>vs</th>
             <th>●</th>
@@ -1649,7 +1929,7 @@
             <th>×</th>
             <th>vs</th>
             <th>●</th>
-            <th class="木村【と】">木村【と】</th>
+            <th class="木村【とし】">木村【とし】</th>
             <th class="石井【友】">石井【友】</th>
             <th><a href="https://youtu.be/oi8hGNAJGwo" target="_blank">動画</a></th>
         </tr>
@@ -2728,7 +3008,7 @@
             <th>vs</th>
             <th>●</th>
             <th class="青木">青木</th>
-            <th class="木村【と】">木村【と】</th>
+            <th class="木村【とし】">木村【とし】</th>
             <th><a href="https://youtu.be/mN_j7i3dPbQ" target="_blank">動画</a></th>
         </tr>
         <tr style="border: none;">
