--- a/tennis/string_stock.html
+++ b/tennis/string_stock.html
@@ -65,7 +65,7 @@
             <td>強スピン</td>
             <td>かなり硬</td>
             <td align="right">￥1,150</td>
-            <td align="center">1</td>
+            <td align="center" bgcolor="lightgray">0</td>
         </tr>
         <tr>
             <td align="center" bgcolor="lightsteelblue">4</td>
@@ -214,8 +214,9 @@
             <td>1.25</td>
             <td>バランス</td>
             <td>やや柔</td>
-            <td align="right"><img src="./img/super_discount.png" style="width: 46px" align="center">　￥500</td>
-            <td align="center">1</td>
+<!--            <td align="right"><img src="./img/super_discount.png" style="width: 46px" align="center">　￥900</td>-->
+            <td align="right">￥900</td>
+            <td align="center">ロール</td>
         </tr>
         <tr>
             <td align="center" bgcolor="lightsteelblue">17</td>
