--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -141,6 +141,201 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tbody name="game" style="font-size: medium;">
         <tr>
+            <th rowspan="5" colspan="1">2025年<br>03月02日(日)</th>
+            <th class="小川">小川</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="桜井">桜井</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/XDn6jc6kDts" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="伊能">伊能</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/hgAbcFZaCbA" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="伊能">伊能</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/jxZ6gQSe5xo" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="折原">折原</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/2s-PAJJuM-4" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="近藤">近藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/IAcEjcqDKBk" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="5" colspan="1">2025年<br>03月01日(土)</th>
+            <th class="和田">和田</th>
+            <th class="折原">折原</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/RSjd4MXhryM" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="折原">折原</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/lomEREV_ZKc" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="折原">折原</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/nfK96DAhP-g" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="伊能">伊能</th>
+            <th class="柏木">柏木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="近藤">近藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/BYuqBhEB4Ko" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="内村">内村</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/He8kNny6DW0" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="3" colspan="1">2025年<br>02月24日(月)<br><font
+                    color="red">天皇誕生日日（振替）</font></th>
+            <th class="小川">小川</th>
+            <th class="高橋【皓】">高橋【皓】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/EFQz5OoOo24" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="大隅">大隅</th>
+            <th class="高橋【皓】">高橋【皓】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="桜井">桜井</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/5PdizssGW_4" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="伊能">伊能</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="高橋【皓】">高橋【皓】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/GFT6UWi_qek" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="4" colspan="1">2025年<br>02月23日(日)</th>
+            <th class="小川">小川</th>
+            <th class="柏木">柏木</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/XCLluTcCqfI" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="和田">和田</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/okk-yydmXUY" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="内村">内村</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="折原">折原</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/nrbJO4-WQjQ" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="須藤">須藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/rvNqn7_lpgM" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
             <th rowspan="4" colspan="1">2025年<br>02月16日(日)</th>
             <th class="内村">内村</th>
             <th class="大隅">大隅</th>
